# ifmocpp

./: Test.cpp  format.h
Task1/: main.c
javatasks/: task2.java
task1/: main.c
task2/: main.c
task3/: rational.cpp  rational.h
task4/: CMakeLists.txt  Test.cpp  format.cpp  format.h
task5/: Test.cpp  format.cpp  format.h
